# advent-of-code-2023

gleam/day01/: README.md  gleam.toml
gleam/day01/src/: day01.gleam
gleam/day01/test/: day01_test.gleam
rust/: .gitignore
rust/bench/: Cargo.toml
rust/bench/src/: main.rs
rust/day01/: Cargo.toml
rust/day01/src/: main.rs
rust/day02/: Cargo.toml
rust/day02/src/: main.rs
rust/day03/: Cargo.toml
rust/day03/src/: main.rs
rust/day04/: Cargo.toml
rust/day04/src/: main.rs
rust/day05/: Cargo.toml
rust/day05/src/: main.rs
