[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
took = "0.1"

day01 = { path = "../day01" }
day02 = { path = "../day02" }
day03 = { path = "../day03" }
